fix spacing problem on mobile

--- a/resources/gato-component-patterns/css/patterns.scss
+++ b/resources/gato-component-patterns/css/patterns.scss
@@ -299,6 +299,9 @@
 }
 
 .title-type {
+  @media (max-width:$sm-breakpoint) {
+    padding: 3rem 0rem;
+  }
   .title {
     font-family: $garamond;
     font-size: 3.2rem;
